[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Dialog/David Chef.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/CaviarDreams/CaviarDreams_Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Dialog/right-arrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Dialog/Background Dialog2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MainScenes/World/Dialogues/Part1/Dialogue2.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "DavidIDLE"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 70, 300 ), Vector2( 70, 290 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 14
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Dialogue2" type="Control"]
anchor_top = -0.00333333
anchor_right = 0.167969
anchor_bottom = 0.59
rect_pivot_offset = Vector2( 72.3385, -412.52 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="David Chef" type="Sprite" parent="."]
position = Vector2( 70, 293.342 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="David Chef"]
autoplay = "DavidIDLE"
anims/DavidIDLE = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.00581395
anchor_top = 0.011236
anchor_right = 0.991861
anchor_bottom = 0.685393
margin_right = 678.4
margin_bottom = 160.0
rect_scale = Vector2( 0.2, 0.55 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.0639535
anchor_top = 0.0393258
anchor_right = 0.895349
anchor_bottom = 0.432584
mouse_default_cursor_shape = 2
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Next Indicator" type="Sprite" parent="."]
position = Vector2( 148, 142 )
scale = Vector2( 0.02, 0.02 )

[node name="NextTextureButton" type="TextureButton" parent="Next Indicator"]
anchor_left = -1559.0
anchor_top = 1325.33
anchor_right = -22.9987
anchor_bottom = 2861.33
margin_right = -1024.0
margin_bottom = -1024.0
rect_scale = Vector2( 3, 3 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PreviousTextureButton" type="TextureButton" parent="Next Indicator"]
anchor_left = -3363.56
anchor_top = 1312.65
anchor_right = -1827.56
anchor_bottom = 2848.65
margin_left = 1536.0
margin_top = 1536.0
margin_right = 512.0
margin_bottom = 512.0
rect_rotation = 180.0
rect_scale = Vector2( 3, 3 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Next Indicator/NextTextureButton" to="." method="_on_NextTextureButton_pressed"]
[connection signal="pressed" from="Next Indicator/PreviousTextureButton" to="." method="_on_PreviousTextureButton_pressed"]
